feat: react-query

--- a/frontapp/package.json
+++ b/frontapp/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.62.11",
+    "@tanstack/react-query-devtools": "^5.62.11",
     "axios": "^1.7.9",
     "next": "15.0.3",
     "react": "19.0.0-rc-66855b96-20241106",
